<resources>

    <string name="app_name">ManagerTask</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_done_tab">DONE</string>
    <string name="title_doing_tab">DOING</string>
    <string name="search_hint">Search...</string>
    <string name="remove_all_tasks_question">Are you sure you want remove all tasks?</string>
    <string name="title_todo_tab">TODO</string>
    <string name="empty_recyclerview">There is nothing to do</string>
    <string name="title">Title</string>
    <string name="title_hint">Title</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="see_all_user">See All Users</string>
    <string name="take_photo">Take a photo</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="description_hint">Description</string>
    <string name="please_login">Please Login To Continue</string>
    <string name="exists_user">Such a user already exists</string>
    <string name="text_checkbox">Done</string>
    <string name="add_task">Add Task</string>
    <string name="incorrect_information">username or password is incorrect!</string>
    <string name="enter_username_password">please enter username and password</string>
    <string name="not_found_username">Username not found</string>
    <string name="send_report">Send Task Via</string>
    <string name="login">Login</string>
    <string name="successful_sign_up">Your registration was successful</string>
    <string name="admin_login">Login as admin</string>
    <string name="sign_up">Sign up</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="no_account">Do not have an account?</string>
    <string name="task_report">The %1$s "'s task about %2$s is %3$s in %4$s! </string>

</resources>