<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/coral"
    android:orientation="vertical"
    tools:context=".controller.fragment.AdminLoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:background="@color/midnight_blue"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="80dp"
            android:text="@string/please_login"
            android:textColor="@android:color/white"
            android:textSize="38sp" />

        <EditText
            android:id="@+id/txt_admin_username"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="80dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/rounded_edit_text"
            android:gravity="center"
            android:hint="@string/username_hint" />

        <EditText
            android:id="@+id/txt_admin_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/rounded_edit_text"
            android:gravity="center"
            android:hint="@string/password_hint"
            android:inputType="number" />

        <Button
            android:id="@+id/btn_login_admin"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/custom_button"
            android:drawableRight="@drawable/ic_arrow_forward"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:backgroundTint="@color/coral" />

    </LinearLayout>

</LinearLayout>